Install 7zip on Windows

--- a/ci/azure-pipelines.yml
+++ b/ci/azure-pipelines.yml
@@ -30,5 +30,6 @@ jobs:
   variables:
     arch: x86_mscoff
   steps:
+  - script: choco install 7zip
   - template: install-ldc-windows.yml
   - template: dub-build-windows.yml
