--- a/ci/azure-pipelines.yml
+++ b/ci/azure-pipelines.yml
@@ -8,7 +8,7 @@ jobs:
   - script: |
       sudo dpkg --add-architecture i386
       sudo apt-get update
-      sudo apt-get install upx-ucl gcc-multilib libcurl4-openssl-dev:amd64 libcurl4-openssl-dev:i386
+      sudo apt-get install upx-ucl gcc-multilib libcurl3:amd64 libcurl3:i386
   - template: install-ldc-posix.yml
   - template: dub-build-posix.yml
   - template: upx-compress.yml
