--- a/ci/install-ldc-posix.yml
+++ b/ci/install-ldc-posix.yml
@@ -1,3 +1,3 @@
 steps:
 - script: curl -fsS https://dlang.org/install.sh | bash -s ldc
-  displayName: 'Installation'
+  displayName: 'LDC installation'
