--- a/ci/azure-pipelines.yml
+++ b/ci/azure-pipelines.yml
@@ -1,32 +1,43 @@
 jobs:
-- job: 'Linux'
+- job: 'Linux x86'
+  pool:
+    vmImage: 'ubuntu-16.04'
+  variables:
+    arch: x86
+  steps:
+  - template: pipeline-linux.yml
+- job: 'Linux x86_64'
   pool:
     vmImage: 'ubuntu-16.04'
   variables:
     arch: x86_64
   steps:
-  - template: install-packages-linux.yml
-  - template: install-ldc-posix.yml
-  - template: dub-build-posix.yml
-  - template: upx-compress.yml
-
-- job: 'macOS'
+  - template: pipeline-linux.yml
+- job: 'macOS x86'
+  pool:
+    vmImage: 'macOS-10.13'
+  variables:
+    arch: x86
+  steps:
+  - template: pipeline-macos.yml
+- job: 'macOS x86_64'
   pool:
     vmImage: 'macOS-10.13'
   variables:
     arch: x86_64
   steps:
-  - template: install-packages-macos.yml
-  - template: install-ldc-posix.yml
-  - template: dub-build-posix.yml
-  - template: upx-compress.yml
-
-- job: 'Windows'
+  - template: pipeline-macos.yml
+- job: 'Windows x86'
   pool:
     vmImage: 'vs2017-win2016'
   variables:
     arch: x86_mscoff
   steps:
-  - template: install-packages-windows.yml
-  - template: install-ldc-windows.yml
-  - template: dub-build-windows.yml
+  - template: pipeline-windows.yml
+- job: 'Windows x86_64'
+  pool:
+    vmImage: 'vs2017-win2016'
+  variables:
+    arch: x86_64
+  steps:
+  - template: pipeline-windows.yml
