--- a/ci/azure-pipelines.yml
+++ b/ci/azure-pipelines.yml
@@ -1,40 +1,40 @@
 jobs:
-- job: 'Linux x86'
+- job: 'Linux_x86'
   pool:
     vmImage: 'ubuntu-16.04'
   variables:
     arch: x86
   steps:
   - template: pipeline-linux.yml
-- job: 'Linux x86_64'
+- job: 'Linux_x86_64'
   pool:
     vmImage: 'ubuntu-16.04'
   variables:
     arch: x86_64
   steps:
   - template: pipeline-linux.yml
-- job: 'macOS x86'
+- job: 'macOS_x86'
   pool:
     vmImage: 'macOS-10.13'
   variables:
     arch: x86
   steps:
   - template: pipeline-macos.yml
-- job: 'macOS x86_64'
+- job: 'macOS_x86_64'
   pool:
     vmImage: 'macOS-10.13'
   variables:
     arch: x86_64
   steps:
   - template: pipeline-macos.yml
-- job: 'Windows x86'
+- job: 'Windows_x86'
   pool:
     vmImage: 'vs2017-win2016'
   variables:
     arch: x86_mscoff
   steps:
   - template: pipeline-windows.yml
-- job: 'Windows x86_64'
+- job: 'Windows_x86_64'
   pool:
     vmImage: 'vs2017-win2016'
   variables:
