--- a/ci/pipeline-linux.yml
+++ b/ci/pipeline-linux.yml
@@ -1,5 +1,10 @@
 steps:
-- template: install-packages-linux.yml
+- script: |
+    sudo dpkg --add-architecture i386
+    sudo apt-get update
+    sudo apt-get install upx-ucl gcc-multilib libcurl3:amd64 libcurl3:i386
+  displayName: 'APT packages installation'
 - template: install-ldc-posix.yml
 - template: dub-build-posix.yml
+- script: strip azure-dlang-test
 - template: upx-compress.yml
