--- a/ci/pipeline-windows.yml
+++ b/ci/pipeline-windows.yml
@@ -1,4 +1,5 @@
 steps:
-- template: install-packages-windows.yml
+- script: choco install 7zip
+  displayName: 'Chocolatey packages installation'
 - template: install-ldc-windows.yml
 - template: dub-build-windows.yml
