--- a/ci/dub-build-posix.yml
+++ b/ci/dub-build-posix.yml
@@ -2,4 +2,5 @@ steps:
 - script: |
     source $(~/dlang/install.sh ldc --activate)
     dub build --arch=$ARCH --compiler=ldc2
+    strip azure-dlang-test
   displayName: 'Build'
