--- a/ci/azure-pipelines.yml
+++ b/ci/azure-pipelines.yml
@@ -6,8 +6,13 @@ jobs:
   strategy:
     matrix:
       x86:
+        op: build
         arch: x86
       x86_64:
+        op: build
+        arch: x86_64
+      test:
+        op: test
         arch: x86_64
   steps:
   - script: |
@@ -24,8 +29,13 @@ jobs:
   strategy:
     matrix:
       x86:
+        op: build
         arch: x86
       x86_64:
+        op: build
+        arch: x86_64
+      test:
+        op: test
         arch: x86_64
   steps:
   - script: brew install upx
@@ -40,8 +50,13 @@ jobs:
   strategy:
     matrix:
       x86:
+        op: build
         arch: x86
       x86_64:
+        op: build
+        arch: x86_64
+      test:
+        op: test
         arch: x86_64
   steps:
   - script: choco install 7zip
