--- a/ci/dub-build-windows.yml
+++ b/ci/dub-build-windows.yml
@@ -2,5 +2,5 @@ steps:
 - powershell: |
     $latest = (Invoke-WebRequest "https://ldc-developers.github.io/LATEST").toString().replace("`n","").replace("`r","")
     $env:PATH += ";$($env:TMP)\ldc2-$($latest)-windows-multilib\bin"
-    dub build --arch=$env:ARCH --compiler=ldc2
+    dub $env:OP --arch=$env:ARCH --compiler=ldc2
   displayName: 'Build'
