Only strip on build

--- a/ci/dub-build-posix.yml
+++ b/ci/dub-build-posix.yml
@@ -2,5 +2,5 @@ steps:
 - script: |
     source $(~/dlang/install.sh ldc --activate)
     dub $OP --arch=$ARCH --compiler=ldc2
-    strip azure-dlang-test
+    if [[ $OP = build ]]; then strip azure-dlang-test; fi
   displayName: 'Build'
