Add missing display names

--- a/ci/make-archive-posix.yml
+++ b/ci/make-archive-posix.yml
@@ -3,3 +3,4 @@ steps:
     strip azure-dlang-test
     upx azure-dlang-test
     zip -0 azure-dlang-test-$(git describe --tags).$(uname | tr '[:upper:]' '[:lower:]').$ARCH.zip azure-dlang-test
+  displayName: 'Archive packing'
