--- a/ci/upload-archive-windows.yml
+++ b/ci/upload-archive-windows.yml
@@ -2,6 +2,5 @@ steps:
 - powershell: |
     $name = "azure-dlang-test-$env:BUILD_SOURCEBRANCHNAME.windows.$ARCH.zip"
     7z -mx=9 a $name azure-dlang-test.exe
-    ldc2 ci\upload_asset.d
-    .\upload_asset --token=$env:GITHUB_TOKEN --file=$name --owner=LaurentTreguier --repo=azure-dlang-test --tag=$env:BUILD_SOURCEBRANCHNAME
+    rdmd ci\upload_asset.d --token=$env:GITHUB_TOKEN --file=$name --owner=LaurentTreguier --repo=azure-dlang-test --tag=$env:BUILD_SOURCEBRANCHNAME
   displayName: 'Archive packing'
