Fix uploader compilation on Windows

--- a/ci/upload-archive-posix.yml
+++ b/ci/upload-archive-posix.yml
@@ -4,6 +4,7 @@ steps:
     strip azure-dlang-test
     upx azure-dlang-test
     export NAME="azure-dlang-test-$BUILD_SOURCEBRANCHNAME.$(uname | tr '[:upper:]' '[:lower:]').$ARCH.zip"
-    zip -0 $NAME azure-dlang-test
-    rdmd ci/upload_asset.d --token=$GITHUB_TOKEN --file=$NAME --owner=LaurentTreguier --repo=azure-dlang-test --tag=$BUILD_SOURCEBRANCHNAME
+    echo "Creating archive $NAME"
+    zip -0 "$NAME" azure-dlang-test
+    rdmd ci/upload_asset.d --token="$GITHUB_TOKEN" --file="$NAME" --owner=LaurentTreguier --repo=azure-dlang-test --tag="$BUILD_SOURCEBRANCHNAME"
   displayName: 'Archive upload'
