Fix Windows archive name

--- a/ci/upload-archive-windows.yml
+++ b/ci/upload-archive-windows.yml
@@ -2,7 +2,7 @@ steps:
 - powershell: |
     $latest = (Invoke-WebRequest "https://ldc-developers.github.io/LATEST").toString().replace("`n","").replace("`r","")
     $env:PATH += ";$($env:TMP)\ldc2-$($latest)-windows-multilib\bin"
-    $name = "azure-dlang-test-$env:BUILD_SOURCEBRANCHNAME.windows.$ARCH.zip"
+    $name = "azure-dlang-test-$env:BUILD_SOURCEBRANCHNAME.windows.$env:ARCH.zip"
     echo "Creating archive $name"
     7z -mx=9 a "$name" azure-dlang-test.exe
     rdmd ci\upload_asset.d --token="$env:GITHUB_TOKEN" --file="$name" --owner=LaurentTreguier --repo=azure-dlang-test --tag="$env:BUILD_SOURCEBRANCHNAME"
