WHY IS IT NOT WORKING

--- a/ci/upload-archive-posix.yml
+++ b/ci/upload-archive-posix.yml
@@ -6,6 +6,7 @@ steps:
     export NAME="azure-dlang-test-$BUILD_SOURCEBRANCHNAME.$(uname | tr '[:upper:]' '[:lower:]').$ARCH.zip"
     echo "Creating archive $NAME"
     zip -0 $NAME azure-dlang-test
-    echo "Creating archive $(pwd)/$NAME"
+    ls
+    echo "Uploading $(pwd)/$NAME"
     rdmd ci/upload_asset.d --token="$GITHUB_TOKEN" --file="$(pwd)/$NAME" --owner=LaurentTreguier --repo=azure-dlang-test --tag=$BUILD_SOURCEBRANCHNAME
   displayName: 'Archive upload'
