WHY IS IT NOT WORKING

--- a/ci/upload-archive-windows.yml
+++ b/ci/upload-archive-windows.yml
@@ -5,7 +5,7 @@ steps:
     $name = "azure-dlang-test-$($env:BUILD_SOURCEBRANCHNAME).windows.$($env:ARCH).zip"
     echo "Creating archive $name"
     7z -mx=9 a $name azure-dlang-test.exe
-    ls
     echo "Uploading $(Join-Path -Path $(Get-Location) -ChildPath $name)"
-    rdmd ci\upload_asset.d --token="$env:GITHUB_TOKEN" --file="$(Join-Path -Path $(Get-Location) -ChildPath $name)" --owner=LaurentTreguier --repo=azure-dlang-test --tag=$env:BUILD_SOURCEBRANCHNAME
+    ldc2 ci\upload_asset.d
+    .\upload_asset --token="$env:GITHUB_TOKEN" --file="$(Join-Path -Path $(Get-Location) -ChildPath $name)" --owner=LaurentTreguier --repo=azure-dlang-test --tag=$env:BUILD_SOURCEBRANCHNAME
   displayName: 'Archive upload'
